Fix horizontal scrollbar bug

--- a/src/static/css/base/_base_reset.scss
+++ b/src/static/css/base/_base_reset.scss
@@ -35,6 +35,11 @@ Sticky header & Footer
     display: grid;
     grid: auto 1fr auto / 1fr;
     
-    width: 100vw;
+    /*
+        100% instead of 100vw, as 100vw includes the space under a vertical scrollbar.
+        and when the page extends onto the vertical scrollbar's area, a horizontal scroll bar appears,
+        which we do not want.
+    */
+    width: 100%;
     height: 100vh;
 }
